// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mono > monorepo > build bar 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > monorepo > build foo 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > project references > build bar 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
  "index.special.d.mts",
  "index.special.d.ts",
  "index.special.js",
  "index.special.min.js",
  "index.special.min.mjs",
  "index.special.mjs",
]
`;

exports[`mono > project references > build foo 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > project references > build fuo 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > project references > build fuu 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > root package > common 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`no mono > import type from external 1`] = `
[
  "commonjs.cjs",
  "commonjs.d.cts",
  "commonjs.min.cjs",
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
  "modulejs.d.mts",
  "modulejs.min.mjs",
  "modulejs.mjs",
]
`;
